--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -6,7 +6,7 @@
 .button {
   &__primary {
     width: auto;
-    min-width: 4.4375rem;
+    // min-width: 4.4375rem;
     height: 2.25rem;
     color: $primary-Timberwolf;
     background-color: $primary-CharcoalBlue;
@@ -20,12 +20,12 @@
 
     @include tablet {
       max-width: 12.5rem;
-      height: 2.375rem;
+      // height: 2.375rem;
     }
 
     @include desktop {
       max-width: 12.5rem;
-      height: 2.375rem;
+      // height: 2.375rem;
     }
   }
 
@@ -46,20 +46,19 @@
 
     @include tablet {
       width: 9rem;
-      max-width: 10rem;
+      // max-width: 10rem;
       height: 2.375rem;
     }
 
     @include desktop {
       width: 7.8125rem;
-      max-width: 8rem;
+      // max-width: 8rem;
       height: 2.375rem;
     }
   }
 
   &__submit {
-    width: 100%;
-    // min-width: 4.4375rem;
+    width: auto;
     height: 2.25rem;
     color: $primary-Timberwolf;
     background-color: $secondary-deer;
@@ -72,14 +71,32 @@
     }
 
     @include tablet {
-      width: 9rem;
-      max-width: 10rem;
       height: 2.375rem;
     }
 
     @include desktop {
-      width: 7.8125rem;
-      max-width: 8rem;
+      height: 2.375rem;
+    }
+  }
+
+  &__create {
+    width: 100%;
+    height: 2.25rem;
+    color: $primary-Timberwolf;
+    background-color: $secondary-deer;
+    padding: 0.5rem 2.5rem;
+    border: 1px solid $secondary-deer;
+    border-radius: 20px;
+
+    &:hover {
+        @include hover-style;
+    }
+
+    @include tablet {
+      height: 2.375rem;
+    }
+
+    @include desktop {
       height: 2.375rem;
     }
   }
@@ -98,19 +115,19 @@
     }
 
     @include tablet {
-      max-width: 10.5rem;
+      // max-width: 10.5rem;
       height: 2.375rem;
     }
 
     @include desktop {
-      max-width: 10.5rem;
+      // max-width: 10.5rem;
       height: 2.375rem;
     }
   }
 
   &__login {
     width: auto;
-    min-width: 4.4375rem;
+    // min-width: 4.4375rem;
     height: 2.25rem;
     color: $primary-Peachcrayon;
     background-color: $background-gunmetal;
@@ -123,12 +140,12 @@
     }
 
     @include tablet {
-      max-width: 10.5rem;
+      // max-width: 10.5rem;
       height: 2.375rem;
     }
 
     @include desktop {
-      max-width: 10.5rem;
+      // max-width: 10.5rem;
       height: 2.375rem;
     }
   }
