--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -4,15 +4,15 @@
 @use "../../styles/partials/typography" as *;
 
 .dashboard {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
+  padding: 2rem;
   background: url(../../assets/images/sumner-mahaffey-7Y0NshQLohk-unsplash.jpg);
 
   &__container {
     width: 100%;
-    height: 100%;
     display: flex;
     gap: 1rem;
     flex-direction: column;
@@ -21,11 +21,40 @@
 
   &__card {
     background: rgba(255, 255, 255, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
     padding: 1.25rem 1.875rem;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 15px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
+  }
+
+  &__subcard {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+  }
+
+  &__hero {
+    position: relative;
+    height: 6rem;
+    background: rgba(255, 255, 255, 0.3);
+    padding: 1.25rem 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 15px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+  }
+
+  &__img {
+    box-sizing: border-box;
+    width: 15rem;
+    display: flex;
+    position: absolute;
+    top: -60px;
+    right: -55px;
   }
 
   &__title {
