--- a/src/pages/PortfolioPage/PortfolioPage.scss
+++ b/src/pages/PortfolioPage/PortfolioPage.scss
@@ -3,52 +3,48 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
-.portfolio {
-  &__title {
-    color: $primary-CharcoalBlue;
-    border-bottom: 2px solid $secondary-slategray;
-    padding: 1.5rem 7.5rem;
-  }
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    @include tablet {
-      flex-direction: row;
-    }
-  }
+.silhouette {
+  height: 100vh;
+  background: url(../../assets/images/andre-portolesi-AMIqdp54tJA-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 2rem;
 
   &__card {
-    width: 70%;
-    height: 100%;
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.3);
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    position: relative;
+    gap: 1rem;
+    padding: 1.25rem 1.875rem;
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
 
     @include tablet {
       width: 100%;
-      height: 100%;
-      padding: 2rem;
+      padding: 4rem;
+      // padding: 2rem 3rem 2rem 3rem;
+      // left: 3rem;
     }
-  }
 
-  &__img {
-    box-sizing: border-box;
-    width: 100%;
-    
-
-    @include tablet {
-      height: 15rem;
-      object-fit: cover;
+    @include desktop {
+      width: 100%;
+      // padding: 4rem 3rem 4rem 3rem;
+      // left: 7rem;
     }
   }
 
   &__subcard {
-    color: $secondary-slategray;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  &__title, 
+  &__description {
+    color: $primary-CharcoalBlue;
   }
 }
