--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -41,6 +41,8 @@
   }
 
   &__input {
+    font-family: "Montserrat";
+    color: $primary-Timberwolf;
     width: 100%;
     height: 2.25rem;
     background: url();
@@ -48,7 +50,7 @@
     border-radius: 4px;
     border: 1px solid #ccc;
     outline: none;
-    padding-left: 0.3rem;
+    padding-left: 0.5rem;
 
     &::placeholder {
       @include placeholder-style;
@@ -60,7 +62,10 @@
     }
 
     &--text{
+      font-family: "Montserrat";
       height: 6rem;
+      padding-left: 0.5rem;
+      padding-top: 0.5rem;
 
       &::placeholder {
         padding-top: 0.5rem;
